--- a/requirements.txt
+++ b/requirements.txt
@@ -14,10 +14,20 @@ django-environ==0.11.2
     # via -r requirements.in
 django-extensions==3.2.3
     # via -r requirements.in
+iniconfig==2.0.0
+    # via pytest
+packaging==23.2
+    # via pytest
+pluggy==1.3.0
+    # via pytest
 psycopg[binary]==3.1.12
     # via -r requirements.in
 psycopg-binary==3.1.12
     # via psycopg
+pytest==7.4.3
+    # via pytest-django
+pytest-django==4.7.0
+    # via -r requirements.in
 sqlparse==0.4.4
     # via django
 typing-extensions==4.8.0
