--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,10 @@ asgiref==3.7.2
 django==4.2.7
     # via
     #   -r requirements.in
+    #   django-debug-toolbar
     #   django-extensions
+django-debug-toolbar==4.2.0
+    # via -r requirements.in
 django-environ==0.11.2
     # via -r requirements.in
 django-extensions==3.2.3
@@ -29,6 +32,8 @@ pytest==7.4.3
 pytest-django==4.7.0
     # via -r requirements.in
 sqlparse==0.4.4
-    # via django
+    # via
+    #   django
+    #   django-debug-toolbar
 typing-extensions==4.8.0
     # via psycopg
