--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@
 #
 asgiref==3.7.2
     # via django
+coverage==7.3.2
+    # via -r requirements.in
 django==4.2.7
     # via
     #   -r requirements.in
@@ -20,7 +22,9 @@ django-extensions==3.2.3
 iniconfig==2.0.0
     # via pytest
 packaging==23.2
-    # via pytest
+    # via
+    #   pytest
+    #   pytest-sugar
 pluggy==1.3.0
     # via pytest
 psycopg[binary]==3.1.12
@@ -28,12 +32,18 @@ psycopg[binary]==3.1.12
 psycopg-binary==3.1.12
     # via psycopg
 pytest==7.4.3
-    # via pytest-django
+    # via
+    #   pytest-django
+    #   pytest-sugar
 pytest-django==4.7.0
+    # via -r requirements.in
+pytest-sugar==0.9.7
     # via -r requirements.in
 sqlparse==0.4.4
     # via
     #   django
     #   django-debug-toolbar
+termcolor==2.3.0
+    # via pytest-sugar
 typing-extensions==4.8.0
     # via psycopg
