Create utilities model

--- a/requirements.in
+++ b/requirements.in
@@ -2,6 +2,8 @@ Django<5.0
 django-environ
 django-extensions
 django-debug-toolbar
+django-reversion
+django-simple-history
 # Database
 psycopg[binary]
 # Testing
