--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ multi_line_output = 3
 line_length = 100
 default_section = "THIRDPARTY"
 known_first_party = []
-known_third_party = ["django", "environ", "pytest"]
+known_third_party = ["django", "environ", "pytest", "reversion", "simple_history"]
 
 [tool.djlint]
 profile="django"
