--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,10 @@ django-reversion==5.0.8
     # via -r requirements.in
 django-simple-history==3.4.0
     # via -r requirements.in
+factory-boy==3.3.0
+    # via -r requirements.in
+faker==20.0.0
+    # via factory-boy
 iniconfig==2.0.0
     # via pytest
 packaging==23.2
@@ -44,6 +48,10 @@ pytest-django==4.7.0
     # via -r requirements.in
 pytest-sugar==0.9.7
     # via -r requirements.in
+python-dateutil==2.8.2
+    # via faker
+six==1.16.0
+    # via python-dateutil
 sqlparse==0.4.4
     # via
     #   django
