--- a/requirements.txt
+++ b/requirements.txt
@@ -8,11 +8,16 @@ asgiref==3.7.2
     # via django
 coverage==7.3.2
     # via -r requirements.in
+defusedxml==0.7.1
+    # via odfpy
+diff-match-patch==20230430
+    # via django-import-export
 django==4.2.7
     # via
     #   -r requirements.in
     #   django-debug-toolbar
     #   django-extensions
+    #   django-import-export
     #   django-reversion
 django-debug-toolbar==4.2.0
     # via -r requirements.in
@@ -20,16 +25,26 @@ django-environ==0.11.2
     # via -r requirements.in
 django-extensions==3.2.3
     # via -r requirements.in
+django-import-export==3.3.3
+    # via -r requirements.in
 django-reversion==5.0.8
     # via -r requirements.in
 django-simple-history==3.4.0
     # via -r requirements.in
+et-xmlfile==1.1.0
+    # via openpyxl
 factory-boy==3.3.0
     # via -r requirements.in
 faker==20.0.0
     # via factory-boy
 iniconfig==2.0.0
     # via pytest
+markuppy==1.14
+    # via tablib
+odfpy==1.4.1
+    # via tablib
+openpyxl==3.1.2
+    # via tablib
 packaging==23.2
     # via
     #   pytest
@@ -50,13 +65,23 @@ pytest-sugar==0.9.7
     # via -r requirements.in
 python-dateutil==2.8.2
     # via faker
+pyyaml==6.0.1
+    # via tablib
 six==1.16.0
     # via python-dateutil
 sqlparse==0.4.4
     # via
     #   django
     #   django-debug-toolbar
+tablib[html,ods,xls,xlsx,yaml]==3.5.0
+    # via
+    #   django-import-export
+    #   tablib
 termcolor==2.3.0
     # via pytest-sugar
 typing-extensions==4.8.0
     # via psycopg
+xlrd==2.0.1
+    # via tablib
+xlwt==1.3.0
+    # via tablib
