--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ asgiref==3.7.2
     # via django
 coverage==7.3.2
     # via -r requirements.in
+crispy-bootstrap5==2023.10
+    # via -r requirements.in
 defusedxml==0.7.1
     # via odfpy
 diff-match-patch==20230430
@@ -15,10 +17,17 @@ diff-match-patch==20230430
 django==4.2.7
     # via
     #   -r requirements.in
+    #   crispy-bootstrap5
+    #   django-crispy-forms
     #   django-debug-toolbar
     #   django-extensions
     #   django-import-export
+    #   django-recaptcha
     #   django-reversion
+django-crispy-forms==2.1
+    # via
+    #   -r requirements.in
+    #   crispy-bootstrap5
 django-debug-toolbar==4.2.0
     # via -r requirements.in
 django-environ==0.11.2
@@ -27,15 +36,19 @@ django-extensions==3.2.3
     # via -r requirements.in
 django-import-export==3.3.3
     # via -r requirements.in
+django-recaptcha==3.0.0
+    # via -r requirements.in
 django-reversion==5.0.8
     # via -r requirements.in
 django-simple-history==3.4.0
+    # via -r requirements.in
+django-widget-tweaks==1.5.0
     # via -r requirements.in
 et-xmlfile==1.1.0
     # via openpyxl
 factory-boy==3.3.0
     # via -r requirements.in
-faker==20.0.0
+faker==20.0.3
     # via factory-boy
 iniconfig==2.0.0
     # via pytest
@@ -81,6 +94,8 @@ termcolor==2.3.0
     # via pytest-sugar
 typing-extensions==4.8.0
     # via psycopg
+whitenoise==6.6.0
+    # via -r requirements.in
 xlrd==2.0.1
     # via tablib
 xlwt==1.3.0
