--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ django==4.2.7
     #   django-import-export
     #   django-recaptcha
     #   django-reversion
+    #   model-bakery
 django-crispy-forms==2.1
     # via
     #   -r requirements.in
@@ -36,7 +37,7 @@ django-extensions==3.2.3
     # via -r requirements.in
 django-import-export==3.3.3
     # via -r requirements.in
-django-recaptcha==3.0.0
+django-recaptcha==4.0.0
     # via -r requirements.in
 django-reversion==5.0.8
     # via -r requirements.in
@@ -48,12 +49,18 @@ et-xmlfile==1.1.0
     # via openpyxl
 factory-boy==3.3.0
     # via -r requirements.in
-faker==20.0.3
-    # via factory-boy
+faker==12.0.1
+    # via
+    #   factory-boy
+    #   mixer
 iniconfig==2.0.0
     # via pytest
 markuppy==1.14
     # via tablib
+mixer==7.2.2
+    # via -r requirements.in
+model-bakery==1.17.0
+    # via -r requirements.in
 odfpy==1.4.1
     # via tablib
 openpyxl==3.1.2
