--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ django==4.2.7
     # via
     #   -r requirements.in
     #   crispy-bootstrap5
+    #   django-admin-autocomplete-filter
     #   django-crispy-forms
     #   django-debug-toolbar
     #   django-extensions
@@ -25,6 +26,10 @@ django==4.2.7
     #   django-recaptcha
     #   django-reversion
     #   model-bakery
+django-admin-autocomplete-filter==0.7.1
+    # via -r requirements.in
+django-admin-rangefilter==0.11.2
+    # via -r requirements.in
 django-crispy-forms==2.1
     # via
     #   -r requirements.in
@@ -34,6 +39,8 @@ django-debug-toolbar==4.2.0
 django-environ==0.11.2
     # via -r requirements.in
 django-extensions==3.2.3
+    # via -r requirements.in
+django-grappelli==3.0.8
     # via -r requirements.in
 django-import-export==3.3.3
     # via -r requirements.in
