--- a/requirements.txt
+++ b/requirements.txt
@@ -50,6 +50,8 @@ django-reversion==5.0.8
     # via -r requirements.in
 django-simple-history==3.4.0
     # via -r requirements.in
+django-watson==1.6.3
+    # via -r requirements.in
 django-widget-tweaks==1.5.0
     # via -r requirements.in
 et-xmlfile==1.1.0
@@ -78,9 +80,9 @@ packaging==23.2
     #   pytest-sugar
 pluggy==1.3.0
     # via pytest
-psycopg[binary]==3.1.12
+psycopg[binary]==3.1.13
     # via -r requirements.in
-psycopg-binary==3.1.12
+psycopg-binary==3.1.13
     # via psycopg
 pytest==7.4.3
     # via
