--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ asgiref==3.7.2
     # via django
 coverage==7.3.2
     # via -r requirements.in
+crispy-bootstrap4==2023.1
+    # via django-slick-reporting
 crispy-bootstrap5==2023.10
     # via -r requirements.in
 defusedxml==0.7.1
@@ -17,6 +19,7 @@ diff-match-patch==20230430
 django==4.2.7
     # via
     #   -r requirements.in
+    #   crispy-bootstrap4
     #   crispy-bootstrap5
     #   django-admin-autocomplete-filter
     #   django-crispy-forms
@@ -24,7 +27,7 @@ django==4.2.7
     #   django-extensions
     #   django-import-export
     #   django-recaptcha
-    #   django-reversion
+    #   django-slick-reporting
     #   model-bakery
 django-admin-autocomplete-filter==0.7.1
     # via -r requirements.in
@@ -33,7 +36,9 @@ django-admin-rangefilter==0.11.2
 django-crispy-forms==2.1
     # via
     #   -r requirements.in
+    #   crispy-bootstrap4
     #   crispy-bootstrap5
+    #   django-slick-reporting
 django-debug-toolbar==4.2.0
     # via -r requirements.in
 django-environ==0.11.2
@@ -46,9 +51,9 @@ django-import-export==3.3.3
     # via -r requirements.in
 django-recaptcha==4.0.0
     # via -r requirements.in
-django-reversion==5.0.8
-    # via -r requirements.in
 django-simple-history==3.4.0
+    # via -r requirements.in
+django-slick-reporting==1.3.0
     # via -r requirements.in
 django-watson==1.6.3
     # via -r requirements.in
@@ -93,9 +98,15 @@ pytest-django==4.7.0
 pytest-sugar==0.9.7
     # via -r requirements.in
 python-dateutil==2.8.2
-    # via faker
+    # via
+    #   django-slick-reporting
+    #   faker
+pytz==2023.3.post1
+    # via django-slick-reporting
 pyyaml==6.0.1
     # via tablib
+simplejson==3.19.2
+    # via django-slick-reporting
 six==1.16.0
     # via python-dateutil
 sqlparse==0.4.4
@@ -103,7 +114,9 @@ sqlparse==0.4.4
     #   django
     #   django-debug-toolbar
 tablib[html,ods,xls,xlsx,yaml]==3.5.0
-    # via django-import-export
+    # via
+    #   django-import-export
+    #   tablib
 termcolor==2.3.0
     # via pytest-sugar
 typing-extensions==4.8.0
