--- a/requirements.txt
+++ b/requirements.txt
@@ -5,40 +5,51 @@
 #    pip-compile
 #
 asgiref==3.7.2
-    # via django
+    # via
+    #   django
+    #   django-browser-reload
 coverage==7.3.2
     # via -r requirements.in
-crispy-bootstrap4==2023.1
-    # via django-slick-reporting
 crispy-bootstrap5==2023.10
     # via -r requirements.in
 defusedxml==0.7.1
     # via odfpy
 diff-match-patch==20230430
     # via django-import-export
+dj-user-login-history==1.0.5
+    # via -r requirements.in
 django==4.2.7
     # via
     #   -r requirements.in
-    #   crispy-bootstrap4
     #   crispy-bootstrap5
+    #   dj-user-login-history
     #   django-admin-autocomplete-filter
+    #   django-admin-logs
+    #   django-axes
+    #   django-browser-reload
     #   django-crispy-forms
     #   django-debug-toolbar
     #   django-extensions
     #   django-import-export
     #   django-recaptcha
-    #   django-slick-reporting
+    #   django-user-visit
     #   model-bakery
 django-admin-autocomplete-filter==0.7.1
     # via -r requirements.in
+django-admin-logs==1.0.2
+    # via -r requirements.in
 django-admin-rangefilter==0.11.2
+    # via -r requirements.in
+django-auto-logout==0.5.1
+    # via -r requirements.in
+django-axes==6.1.1
+    # via -r requirements.in
+django-browser-reload==1.12.1
     # via -r requirements.in
 django-crispy-forms==2.1
     # via
     #   -r requirements.in
-    #   crispy-bootstrap4
     #   crispy-bootstrap5
-    #   django-slick-reporting
 django-debug-toolbar==4.2.0
     # via -r requirements.in
 django-environ==0.11.2
@@ -53,9 +64,7 @@ django-recaptcha==4.0.0
     # via -r requirements.in
 django-simple-history==3.4.0
     # via -r requirements.in
-django-slick-reporting==1.3.0
-    # via -r requirements.in
-django-watson==1.6.3
+django-user-visit==2.0
     # via -r requirements.in
 django-widget-tweaks==1.5.0
     # via -r requirements.in
@@ -85,9 +94,9 @@ packaging==23.2
     #   pytest-sugar
 pluggy==1.3.0
     # via pytest
-psycopg[binary]==3.1.13
+psycopg[binary]==3.1.14
     # via -r requirements.in
-psycopg-binary==3.1.13
+psycopg-binary==3.1.14
     # via psycopg
 pytest==7.4.3
     # via
@@ -98,15 +107,9 @@ pytest-django==4.7.0
 pytest-sugar==0.9.7
     # via -r requirements.in
 python-dateutil==2.8.2
-    # via
-    #   django-slick-reporting
-    #   faker
-pytz==2023.3.post1
-    # via django-slick-reporting
+    # via faker
 pyyaml==6.0.1
     # via tablib
-simplejson==3.19.2
-    # via django-slick-reporting
 six==1.16.0
     # via python-dateutil
 sqlparse==0.4.4
@@ -117,13 +120,20 @@ tablib[html,ods,xls,xlsx,yaml]==3.5.0
     # via
     #   django-import-export
     #   tablib
-termcolor==2.3.0
+termcolor==2.4.0
     # via pytest-sugar
 typing-extensions==4.8.0
     # via psycopg
+ua-parser==0.18.0
+    # via user-agents
+user-agents==2.2.0
+    # via django-user-visit
 whitenoise==6.6.0
     # via -r requirements.in
 xlrd==2.0.1
     # via tablib
 xlwt==1.3.0
     # via tablib
+
+# The following packages are considered to be unsafe in a requirements file:
+# setuptools
